--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 15-744 / Graduate Computer Networks
+title: ECE 5545 Machine Learning Hardware and Systems
 email: sherry@cs.cmu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   lorem ipsum
