--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ECE 5545 Machine Learning Hardware and Systems
-email: sherry@cs.cmu.edu
+email: mohamed@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
   lorem ipsum
 baseurl: "" # the subpath of your site, e.g. /blog
