--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ECE 5545 Machine Learning Hardware and Systems
+title: ECE 6950 Special Topics on Reconfigurable Computing and FPGA Design
 email: mohamed@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
   lorem ipsum
