--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ECE 6950 Special Topics on Reconfigurable Computing and FPGA Design
+title: ECE 6950 Special Topics on Deep Learning Efficiency
 email: mohamed@cornell.edu
 description: >- # this means to ignore newlines until "baseurl:"
   lorem ipsum
